# case-insensitive-dict

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  publish-test.yml  publish.yml
case_insensitive_dict/: __init__.py  case_insensitive_dict.py
src/case_insensitive_dict/: __init__.py  case_insensitive_dict.py  utils.py
src/tests/: test_case_insensitive_dict.py  test_utils.py
tests/: test_case_insensitive_dict.py
